Trying to get a renderer process going

--- a/tests/SampleData/index.html
+++ b/tests/SampleData/index.html
@@ -1,5 +1,7 @@
 <html><head><title>Client Scheme Handler</title></head>
 <body>
 WOOT
+
+<input type="button" onclick="example.test.myfunction()" />
 </body>
 </html>
